bat.string1.lessons.bat.string1.StringTimes.scala.error
stringTimes:7: error: unclosed character literal
		chaine = chaine + 'str'
                                      ^